# researches

./: .gitignore  Pipfile  README.md  index.html  pyproject.toml  requirements.txt  test.py
researches/: __init__.py  markdown.py  primp.py  primp.pyi  schemas.py  search.py  utils.py
